api/gate: regenerate gate API from spinnaker master-latest-validated-20190121213415
