# api/gate/api/swagger.yaml
@@ -460,7 +460,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -559,7 +560,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -614,7 +616,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -684,7 +687,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -1017,7 +1021,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -1054,7 +1059,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -1296,7 +1302,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -1433,7 +1440,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -1713,6 +1721,55 @@ paths:
         404:
           description: "Not Found"
       deprecated: true
+  /artifacts/account/{accountName}/versions:
+    get:
+      tags:
+      - "artifact-controller"
+      summary: "Retrieve the list of artifact versions by account and artifact names"
+      operationId: "artifactVersionsUsingGET"
+      consumes:
+      - "application/json"
+      produces:
+      - "*/*"
+      parameters:
+      - name: "accountName"
+        in: "path"
+        description: "accountName"
+        required: true
+        type: "string"
+        x-exportParamName: "AccountName"
+      - name: "type"
+        in: "query"
+        description: "type"
+        required: true
+        type: "string"
+        x-exportParamName: "Type_"
+      - name: "artifactName"
+        in: "query"
+        description: "artifactName"
+        required: true
+        type: "string"
+        x-exportParamName: "ArtifactName"
+      - name: "X-RateLimit-App"
+        in: "header"
+        description: "X-RateLimit-App"
+        required: false
+        type: "string"
+        x-exportParamName: "XRateLimitApp"
+        x-optionalDataType: "String"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              type: "string"
+        401:
+          description: "Unauthorized"
+        403:
+          description: "Forbidden"
+        404:
+          description: "Not Found"
   /artifacts/credentials:
     get:
       tags:
@@ -1737,7 +1794,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -2461,7 +2519,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -2570,7 +2629,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -2594,7 +2654,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -2794,7 +2855,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -2909,7 +2971,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -2933,7 +2996,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -3000,7 +3064,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -3033,7 +3098,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -3700,7 +3766,7 @@ paths:
       tags:
       - "pipeline-controller"
       summary: "Evaluate a pipeline expression using the provided execution as context"
-      operationId: "evaluateExpressionForExecutionViaPOSTUsingPOST"
+      operationId: "evaluateExpressionForExecutionViaPOSTUsingPOST_1"
       consumes:
       - "text/plain"
       produces:
@@ -3904,7 +3970,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -4067,6 +4134,100 @@ paths:
           description: "Forbidden"
         404:
           description: "Not Found"
+  /projects:
+    get:
+      tags:
+      - "project-controller"
+      summary: "Get all projects"
+      operationId: "allUsingGET_3"
+      consumes:
+      - "application/json"
+      produces:
+      - "*/*"
+      parameters: []
+      responses:
+        200:
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              type: "object"
+              properties: {}
+        401:
+          description: "Unauthorized"
+        403:
+          description: "Forbidden"
+        404:
+          description: "Not Found"
+  /projects/{id}:
+    get:
+      tags:
+      - "project-controller"
+      summary: "Get a project"
+      operationId: "getUsingGET_1"
+      consumes:
+      - "application/json"
+      produces:
+      - "*/*"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "id"
+        required: true
+        type: "string"
+        x-exportParamName: "Id"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            type: "object"
+            additionalProperties:
+              type: "object"
+              properties: {}
+        401:
+          description: "Unauthorized"
+        403:
+          description: "Forbidden"
+        404:
+          description: "Not Found"
+  /projects/{id}/clusters:
+    get:
+      tags:
+      - "project-controller"
+      summary: "Get a project's clusters"
+      operationId: "getClustersUsingGET_3"
+      consumes:
+      - "application/json"
+      produces:
+      - "*/*"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "id"
+        required: true
+        type: "string"
+        x-exportParamName: "Id"
+      - name: "X-RateLimit-App"
+        in: "header"
+        description: "X-RateLimit-App"
+        required: false
+        type: "string"
+        x-exportParamName: "XRateLimitApp"
+        x-optionalDataType: "String"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              type: "object"
+              properties: {}
+        401:
+          description: "Unauthorized"
+        403:
+          description: "Forbidden"
+        404:
+          description: "Not Found"
   /projects/{id}/pipelines:
     get:
       tags:
@@ -4106,7 +4267,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -4118,7 +4280,7 @@ paths:
       tags:
       - "pubsub-subscription-controller"
       summary: "Retrieve the list of pub/sub subscriptions configured in Echo."
-      operationId: "allUsingGET_3"
+      operationId: "allUsingGET_4"
       consumes:
       - "application/json"
       produces:
@@ -4207,7 +4369,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -4220,7 +4383,7 @@ paths:
       - "security-group-controller"
       summary: "Retrieve a list of security groups, grouped by account, cloud provider,\
         \ and region"
-      operationId: "allUsingGET_4"
+      operationId: "allUsingGET_5"
       consumes:
       - "application/json"
       produces:
@@ -4381,7 +4544,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -4418,7 +4582,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -5305,7 +5470,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -5345,37 +5511,24 @@ paths:
           description: "Forbidden"
         404:
           description: "Not Found"
-  /v2/pipelineTemplates/resolve:
-    get:
+  /v2/pipelineTemplates/plan:
+    post:
       tags:
       - "v-2-pipeline-templates-controller"
-      summary: "Resolve a pipeline template."
-      operationId: "resolveTemplatesUsingGET_1"
+      summary: "Plan a pipeline template configuration."
+      operationId: "planUsingPOST"
       consumes:
       - "application/json"
       produces:
       - "*/*"
       parameters:
-      - name: "source"
-        in: "query"
-        description: "source"
+      - in: "body"
+        name: "pipeline"
+        description: "pipeline"
         required: true
-        type: "string"
-        x-exportParamName: "Source"
-      - name: "executionId"
-        in: "query"
-        description: "executionId"
-        required: false
-        type: "string"
-        x-exportParamName: "ExecutionId"
-        x-optionalDataType: "String"
-      - name: "pipelineConfigId"
-        in: "query"
-        description: "pipelineConfigId"
-        required: false
-        type: "string"
-        x-exportParamName: "PipelineConfigId"
-        x-optionalDataType: "String"
+        schema:
+          type: "object"
+        x-exportParamName: "Pipeline"
       responses:
         200:
           description: "OK"
@@ -5384,6 +5537,8 @@ paths:
             additionalProperties:
               type: "object"
               properties: {}
+        201:
+          description: "Created"
         401:
           description: "Unauthorized"
         403:
@@ -5395,7 +5550,7 @@ paths:
       tags:
       - "v-2-pipeline-templates-controller"
       summary: "Get a pipeline template."
-      operationId: "getUsingGET_1"
+      operationId: "getUsingGET_2"
       consumes:
       - "application/json"
       produces:
@@ -5754,7 +5909,8 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/HashMap"
+              type: "object"
+              properties: {}
         401:
           description: "Unauthorized"
         403:
@@ -5813,7 +5969,7 @@ paths:
       - in: "body"
         name: "event"
         description: "event"
-        required: true
+        required: false
         schema:
           type: "object"
         x-exportParamName: "Event"
@@ -5906,11 +6062,6 @@ definitions:
     properties:
       authority:
         type: "string"
-  HashMap:
-    type: "object"
-    additionalProperties:
-      type: "object"
-      properties: {}
   HashMap«string,object»:
     type: "object"
     additionalProperties:
